Changed the class type to a record. Deleted methods which are provides automatically by the record class.